Fix center style on banner and nav on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -501,6 +501,12 @@ article p {
   text-align: center
 }
 
+.banner-container-outer {
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .banner-container {
   position: relative;
   padding: 20px;
@@ -617,6 +623,10 @@ article p {
     position: static;
     right: 0;
     margin: 0;
+    display: inline-flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
   }
   nav a {
     display: inline-block;
@@ -636,5 +646,12 @@ article p {
     content: "";
     margin-top: 120px;
     margin-bottom: 0;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .banner-container-outer {
+    margin: 0;
+    width: 100% !important;
   }
 }
